alignment issue

--- a/style.css
+++ b/style.css
@@ -14,10 +14,8 @@
 }
 #contact {
   text-align: center;
-  padding-bottom: 5px;
 }
 #position {
-  text-align: center;
   border-style: solid;
   border-top-color: powderblue;
   border-bottom-color: midnightblue;
